K8s/microservices/ratings/pod-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ratings-network-policy
spec:
  podSelector:
    matchLabels:
      app: php 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: web

    ports:
    - protocol: TCP
      port: 80  
    
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
      
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53

  - to:
    - podSelector:
        matchLabels:
          app: mysql
      
    ports:
    - protocol: TCP
      port: 3306

  - to:
    - podSelector:
        matchLabels:
          app: catalogue
      
    ports:
    - protocol: TCP
      port: 8080
